--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,13 @@ uuid = "7687b472-1afb-42b7-b5e5-1d8fde144a41"
 authors = ["Michitoshi Tsubaki"]
 version = "1.0.0-DEV"
 
+[deps]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
+
 [compat]
+Plots = "1.40.10"
+PlutoUI = "0.7.23"
 julia = "1.6.7"
 
 [extras]
